# trisagion

./: CHANGELOG.md  LICENSE  README.md  cabal.project  trisagion.cabal
docs/: readme.md
src/Trisagion/: Get.hs  Parser.hs  ParserT.hs  Serializer.hs
src/Trisagion/Core/: Parser.hs
src/Trisagion/Examples/: Table.hs
src/Trisagion/Examples/Table/: Parsers.hs
src/Trisagion/Getters/: Char.hs  Combinators.hs  ParseError.hs  Splittable.hs  Streamable.hs  Word8.hs
src/Trisagion/Lib/: NonEmpty.hs  Utils.hs
src/Trisagion/Parsers/: Binary.hs  Char.hs  Combinators.hs  HasOffset.hs  ParseError.hs  Source.hs  Split.hs  Splittable.hs  Streamable.hs  Word8.hs
src/Trisagion/Serializers/: Binary.hs  Builder.hs  Combinators.hs  Text.hs
src/Trisagion/Streams/: Chunk.hs  Counter.hs  Offset.hs  Position.hs  Streamable.hs
src/Trisagion/Typeclasses/: Binary.hs  Builder.hs  HasOffset.hs  HasPosition.hs  Mergeable.hs  Sink.hs  Source.hs  Split.hs  Splittable.hs  Streamable.hs  Text.hs
src/Trisagion/Types/: Either.hs  Error.hs  ErrorItem.hs  ParseError.hs  Result.hs
src/Trisagion/Utils/: Bits.hs  Either.hs  Integral.hs  List.hs
tests/: Main.hs  Spec.hs
tests/Lib/: Function.hs  FunctionExp.hs  Functions.hs  Generators.hs  Helpers.hs  ParserExp.hs  Predicate.hs  Predicates.hs  Properties.hs  Property.hs  Runners.hs
tests/Lib/Properties/: Adjoints.hs  Alternative.hs  Builder.hs  MonoFunctor.hs  Monoid.hs  Splittable.hs  Streamable.hs
tests/Tests/: GetSpec.hs  Helpers.hs  Parser.hs  ParserSpec.hs
tests/Tests/Examples/: TableSpec.hs
tests/Tests/Examples/Table/: ParsersSpec.hs
tests/Tests/Getters/: CharSpec.hs  CombinatorsSpec.hs  ParseErrorSpec.hs  SplittableSpec.hs  StreamableSpec.hs  Word8Spec.hs
tests/Tests/Parsers/: CharSpec.hs  CombinatorsSpec.hs  ParseErrorSpec.hs  SplittableSpec.hs  StreamableSpec.hs  Word8Spec.hs
tests/Tests/Typeclasses/: Binary.hs  Builder.hs  Splittable.hs  Streamable.hs
tests/Tests/Types/: Counter.hs  Offset.hs  ParseError.hs
