cabal-version:      3.0
name:               trisagion
version:            0.1.0.0
synopsis:           A monadic parsing and serializing library.
description:        Please see the README on GitHub at <https://github.com/lambda-dom/trisagion#readme>
category:           Parsing
homepage:           https://github.com/lambda-dom/trisagion#readme
author:             lambda-dom
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         grodrigues.math@gmail.com
copyright:          2025 G. Rodrigues
build-type:         Simple
tested-with:
    GHC == {9.6.6}
extra-doc-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/lambda-dom/trisagion

common common-fields
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        DerivingVia
        TypeFamilies
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wunused-packages
    build-depends:
        -- GHC 9.6
        base >=4.18 && <4.19,
        bytestring >=0.11 && <0.13,
        optics-core >= 0.4.1 && <0.4.2,
        vector >=0.13 && <0.14,
        -- Non-hackage libraries.
        mono >=0.1 && <0.2,

library
    import: common-fields
    hs-source-dirs:
        src
    build-depends:
        containers >=0.6 && <0.8,
        contravariant >=1.5 && <1.6,
        mtl >=2.3 && <2.4,
        text >=2.0 && <2.2,
    other-modules:
        Trisagion.Types.Result
    exposed-modules:
        Trisagion.Lib.Utils
        Trisagion.Typeclasses.Streamable
        Trisagion.Typeclasses.HasOffset
        Trisagion.Typeclasses.Splittable
        Trisagion.Types.ErrorItem
        Trisagion.Types.ParseError
        Trisagion.Streams.Counter
        Trisagion.Streams.Offset
        Trisagion.Parser
        Trisagion.Parsers.Combinators
        Trisagion.Parsers.ParseError
        Trisagion.Parsers.Streamable
        Trisagion.Parsers.Splittable
        Trisagion.Parsers.Char
        Trisagion.Parsers.Word8
        Trisagion.Streams.Chunk
        Trisagion.Typeclasses.Builder
        Trisagion.Typeclasses.Binary
        Trisagion.Typeclasses.Mergeable
        Trisagion.Serializer

test-suite trisagion-tests
    import: common-fields
    type: exitcode-stdio-1.0
    hs-source-dirs:
        tests
    main-is: Main.hs
    build-depends:
        hedgehog ^>=1.4 && <1.5,
        trisagion,
    other-modules:
        Lib.Predicate
        Lib.Function
        Lib.Generators
        Lib.Property
        Lib.ParserExp
        Lib.Properties.Monoid
        Lib.Properties.MonoFunctor
        Lib.Properties.Streamable
        Lib.Properties.Splittable
        Tests.Types.Counter
        Tests.Types.Offset
        Tests.Types.ParseError
