cabal-version:      3.0
name:               trisagion
version:            0.1.0.0
synopsis:           A parsing and serializing library.
description:        Please see the README on GitHub at <https://github.com/lambda-dom/trisagion#readme>
category:           Parsing
homepage:           https://github.com/lambda-dom/trisagion#readme
author:             lambda-dom
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         grodrigues.math@gmail.com
copyright:          2025 G. Rodrigues
build-type:         Simple
tested-with:
    GHC == {9.10.3}
extra-doc-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/lambda-dom/trisagion

library
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        DerivingVia
        FunctionalDependencies
        RequiredTypeArguments
        ExplicitNamespaces
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wunused-packages
    hs-source-dirs:
        src
    build-depends:
        -- GHC >= 9.10 && < 9.12
        base >=4.20 && <4.21,
        -- Libraries.
        mtl >=2.3 && <2.4,
        bytestring >=0.12 && <0.13,
        containers >=0.7 && <0.8,
        text >=2.1 && <2.2,
        vector >=0.13 && <0.14,
        -- Non-hackage libraries.
        mono >=0.3 && <0.4,
    build-depends:
    other-modules:
    exposed-modules:
        Trisagion.Utils.Either
        Trisagion.Utils.List
        Trisagion.Utils.Bits
        Trisagion.Types.Result
        Trisagion.Types.ParseError
        Trisagion.Streams.Counter
        Trisagion.Typeclasses.Streamable
        Trisagion.Typeclasses.HasOffset
        Trisagion.Typeclasses.Splittable
        Trisagion.Typeclasses.Binary
        Trisagion.Parser
        Trisagion.Parsers.Combinators
        Trisagion.Parsers.Streamable
        Trisagion.Parsers.HasOffset
        Trisagion.Parsers.ParseError
        Trisagion.Parsers.Splittable
        Trisagion.Parsers.Char
